# divr-multimodal

./: =0.46.1  LICENSE  Pipfile  README.md  README.zh-CN.md  divr-ssl.code-workspace  pyproject.toml  svd_femh_voiced.csv  texts.csv
.devcontainer/: .env.default  Dockerfile  devcontainer.json  docker-compose.yml
divr_StatisticalAnalysis/: __main__.py  convert.py
divr_llm/: README.md  README.zh-CN.md  requirements.txt
divr_llm/Qlora/: qwen2audio_lora.yml
divr_llm/analysis/: README.md  __init__.py  report.py
divr_llm/data_loader/: __init__.py  qwen2audio.py  yaml_voice_dataset.py
divr_llm/lora/: qwen2audio.yaml
divr_llm/model/: README.md  __init__.py  qwen2audio_lora.py
divr_llm/src/: __init__.py  __main__.py
divr_multimodal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
divr_multimodal/benchmark/: benchmark.py  task.py
divr_multimodal/convert/: convert.py
divr_multimodal/prepare_dataset/: processed.py
divr_multimodal/src/: __main__.py
divr_multimodal/statisticalanalysis/: convert_csv.py
divr_multimodal/task_generator/: GeneratorV1.py  __init__.py  generator.py  task.py
divr_multimodel/: Pipfile  __main__.py
divr_multimodel/data_loader/: __init__.py  dtypes.py
divr_multimodel/model/: __init__.py
divr_ssl/data_loader/: loader.py
divr_ssl/experiments/: __init__.py  frozen_data2vec_simple.py  frozen_data2vec_simple_2.py  frozen_unispeechSAT_simple.py  frozen_unispeechSAT_simple_2.py  frozen_wav2vec_simple.py  frozen_wav2vec_simple_2.py
divr_ssl/model/: feature.py  output.py  (+1 more)
divr_thesis/: README.md  README.zh-CN.md
(+118 files in other folders)
